Updated links to komito.net domain

--- a/integration/index.html
+++ b/integration/index.html
@@ -7,39 +7,39 @@
 <link rel="manifest" href="../manifest.json">
 
 <title>Komito Analytics Integration Instructions</title>
-<link rel="canonical" href="https://datamart.github.io/Komito/integration/">
+<link rel="canonical" href="https://komito.net/integration/">
 <meta name="description" content="Step-by-step Komito Analytics integration instructions.">
 
 <meta itemprop="name" content="Komito Analytics Integration Instructions">
-<meta itemprop="url" content="https://datamart.github.io/Komito/integration/">
+<meta itemprop="url" content="https://komito.net/integration/">
 <meta itemprop="description" content="Step-by-step Komito Analytics integration instructions.">
-<meta itemprop="image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta itemprop="image" content="https://komito.net/images/komito-logo-600x455.jpg">
 
 <meta property="og:title" content="Komito Analytics Integration Instructions">
-<meta property="og:url" content="https://datamart.github.io/Komito/integration/">
+<meta property="og:url" content="https://komito.net/integration/">
 <meta property="og:description" content="Step-by-step Komito Analytics integration instructions.">
-<meta property="og:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta property="og:image" content="https://komito.net/images/komito-logo-600x455.jpg">
 <meta property="og:type" content="website">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@thedatamartinc">
 <meta name="twitter:creator" content="@thedatamartinc">
 <meta name="twitter:title" content="Komito Analytics Integration Instructions">
-<meta name="twitter:url" content="https://datamart.github.io/Komito/integration/">
+<meta name="twitter:url" content="https://komito.net/integration/">
 <meta name="twitter:description" content="Step-by-step Komito Analytics integration instructions.">
-<meta name="twitter:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta name="twitter:image" content="https://komito.net/images/komito-logo-600x455.jpg">
 
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="../styles.css" rel="stylesheet">
-<link rel="prefetch prerender" href="https://datamart.github.io/Komito/">
-<link rel="prefetch prerender" href="https://datamart.github.io/Komito/demo/">
+<link rel="prefetch prerender" href="https://komito.net/">
+<link rel="prefetch prerender" href="https://komito.net/demo/">
 <link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
 </head>
 <body class="kmt-integration">
   <div class="kmt-page">
     <div class="kmt-page-header">
       <div class="kmt-logo">
-        <a href="/Komito/" title="Komito Analytics"><svg version="1.1"
+        <a href="../" title="Komito Analytics"><svg version="1.1"
            xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px"
            height="45px" viewBox="0 0 45 45"><polygon fill="#d20"
            points="0,0 0,20.1 19.8,0"/><polygon fill="#f80"
@@ -71,7 +71,7 @@
         <p>
           <b>1. </b>Adding <b>Komito Analytics</b> to a website is easy – just place this code below,
           ideally right before the closing <code>&lt;/body&gt;</code> tag:</p>
-        <code><pre><span class="tag">&lt;script</span> <span class="atn">src</span>="<a href="https://datamart.github.io/Komito/komito.js" rel="nofollow">//datamart.github.io/Komito/komito.js</a>"<span class="tag">&gt;&lt;/script&gt;<span></pre></code>
+        <code><pre><span class="tag">&lt;script</span> <span class="atn">src</span>="<a href="https://komito.net/komito.js" rel="nofollow">https://komito.net/komito.js</a>"<span class="tag">&gt;&lt;/script&gt;<span></pre></code>
         <p>2. Default <b>Komito Analytics</b> configuration: (Put modified configuration code before main script.)</p>
         <code><pre><span class="tag">&lt;script&gt;</span>
   <span class="kwd">var</span> _komito = _komito || {
@@ -335,9 +335,9 @@
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
   ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
   </script>
   <script src="../scripts/functions.js"></script>
-  <script src="https://datamart.github.io/Komito/komito.js"></script>
+  <script src="https://komito.net/komito.js"></script>
 </body></html>
