--- a/demo/index.html
+++ b/demo/index.html
@@ -6,39 +6,39 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"><link rel="manifest" href="../manifest.json">
 
 <title>Komito Analytics Demo Page</title>
-<link rel="canonical" href="https://datamart.github.io/Komito/demo">
+<link rel="canonical" href="https://komito.net/demo">
 <meta name="description" content="See Komito Analytics in action!">
 
 <meta itemprop="name" content="Komito Analytics Demo Page">
-<meta itemprop="url" content="https://datamart.github.io/Komito/demo">
+<meta itemprop="url" content="https://komito.net/demo">
 <meta itemprop="description" content="See Komito Analytics in action!">
-<meta itemprop="image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta itemprop="image" content="https://komito.net/images/komito-logo-600x455.jpg">
 
 <meta property="og:title" content="Komito Analytics Demo Page">
-<meta property="og:url" content="https://datamart.github.io/Komito/demo">
+<meta property="og:url" content="https://komito.net/demo">
 <meta property="og:description" content="See Komito Analytics in action!">
-<meta property="og:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta property="og:image" content="https://komito.net/images/komito-logo-600x455.jpg">
 <meta property="og:type" content="website">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@thedatamartinc">
 <meta name="twitter:creator" content="@thedatamartinc">
 <meta name="twitter:title" content="Komito Analytics Demo Page">
-<meta name="twitter:url" content="https://datamart.github.io/Komito/demo">
+<meta name="twitter:url" content="https://komito.net/demo">
 <meta name="twitter:description" content="See Komito Analytics in action!">
-<meta name="twitter:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta name="twitter:image" content="https://komito.net/images/komito-logo-600x455.jpg">
 
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="../styles.css" rel="stylesheet">
-<link rel="prefetch prerender" href="https://datamart.github.io/Komito/">
-<link rel="prefetch prerender" href="https://datamart.github.io/Komito/integration/">
+<link rel="prefetch prerender" href="https://komito.net">
+<link rel="prefetch prerender" href="https://komito.net/integration/">
 <link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
 </head>
 <body class="kmt-demo">
   <div class="kmt-page">
     <div class="kmt-page-header">
       <div class="kmt-logo">
-        <a href="/Komito/" title="Komito Analytics"><svg version="1.1"
+        <a href="../" title="Komito Analytics"><svg version="1.1"
            xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px"
            height="45px" viewBox="0 0 45 45"><polygon fill="#d20"
            points="0,0 0,20.1 19.8,0"/><polygon fill="#f80"
@@ -342,5 +342,5 @@
   </script>
   <script>var _komito = {debugMode: 1};</script>
   <script src="../scripts/functions.js"></script>
-  <script src="https://datamart.github.io/Komito/komito.js"></script>
+  <script src="https://komito.net/komito.js"></script>
 </body></html>
