--- a/demo/index.html
+++ b/demo/index.html
@@ -28,7 +28,7 @@
 <meta name="twitter:description" content="See Komito Analytics in action!">
 <meta name="twitter:image" content="https://komito.net/images/komito-logo-600x455.jpg">
 
-<link href="/Komito/favicon.ico" rel="shortcut icon">
+<link href="../favicon.ico" rel="shortcut icon">
 <link href="../styles.css" rel="stylesheet">
 <link rel="prefetch prerender" href="https://komito.net">
 <link rel="prefetch prerender" href="https://komito.net/integration/">
