--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <meta name="twitter:description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
 <meta name="twitter:image" content="https://komito.net/images/komito-logo-600x455.jpg">
 
-<link href="/Komito/favicon.ico" rel="shortcut icon">
+<link href="./favicon.ico" rel="shortcut icon">
 <link href="styles.css" rel="stylesheet">
 <link rel="prefetch prerender" href="https://komito.net/integration/">
 <link rel="prefetch prerender" href="https://komito.net/demo/">
