--- a/integration/index.html
+++ b/integration/index.html
@@ -29,7 +29,7 @@
 <meta name="twitter:description" content="Step-by-step Komito Analytics integration instructions.">
 <meta name="twitter:image" content="https://komito.net/images/komito-logo-600x455.jpg">
 
-<link href="/Komito/favicon.ico" rel="shortcut icon">
+<link href="../favicon.ico" rel="shortcut icon">
 <link href="../styles.css" rel="stylesheet">
 <link rel="prefetch prerender" href="https://komito.net/">
 <link rel="prefetch prerender" href="https://komito.net/demo/">
