--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
 <meta name="twitter:image" content="https://komito.net/images/komito-logo-600x455.jpg">
 
 <link href="/favicon.ico" rel="shortcut icon">
-<link href="styles.css" rel="stylesheet">
+<link href="/styles.css" rel="stylesheet">
 <link rel="prefetch prerender" href="https://komito.net/">
 <link rel="prefetch prerender" href="https://komito.net/integration/">
 <link rel="prefetch prerender" href="https://komito.net/demo/">
@@ -94,5 +94,14 @@
       </p>
     </div>
   </div>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
+  </script>
+  <script src="/scripts/functions.js"></script>
+  <script src="https://komito.net/komito.js"></script>
 </body>
 </html>
