--- a/404.html
+++ b/404.html
@@ -69,8 +69,10 @@
     <div class="kmt-page-content">
       <div class="kmt-section">
         <h3>Looks like something went wrong!</h3>
-        <p>We can't find the page you're looking for. </p>
-        <p>We track these errors automatically, but if the problem persists feel free to contact us.</p>
+        <p>
+          We can't find the page you're looking for.<br>
+          We track these errors automatically, but if the problem persists feel free to contact us.
+        </p>
       </div>
     </div>
     <div class="kmt-page-footer">
