--- a/404.html
+++ b/404.html
@@ -38,72 +38,68 @@
 <link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
 </head>
 <body>
-  <div class="kmt-page">
-    <div class="kmt-page-header">
-      <div class="kmt-logo">
-        <a href="/" title="Komito Analytics"><svg version="1.1"
-           xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px"
-           height="45px" viewBox="0 0 45 45"><polygon fill="#d20"
-           points="0,0 0,20.1 19.8,0"/><polygon fill="#f80"
-           points="0,32 0,45 20.9,45 8.3,24.6"/><polygon fill="#07d"
-           points="33.6,45 45,45 45,0 32.3,0 14.6,18"/></svg><span
-           class="thin-font"><b>Komito</b><i>Analytics</i></span></a>
-      </div>
-      <div class="hamburger">
-        <div class="hamburger-box"><div class="hamburger-inner"></div></div>
-      </div>
-      <div class="kmt-navigation">
-        <ul>
-          <li><a title="Komito Analytics overview page."
-                 href="/" >Overview</a></li>
-          <li><a title="Step-by-step Komito Analytics integration instructions."
-                 href="/integration/" >Integration</a></li>
-          <li><a title="See Komito Analytics in action!"
-                 href="/demo/" class="kmt-current-page">Demo</a></li>
-          <li><a href="https://github.com/Datamart/Komito/tree/master"
-                 title="Get Komito Analytics Source Code."
-                 rel="nofollow">Get source code</a></li>
-        </ul>
-      </div>
+<div class="kmt-page">
+  <div class="kmt-page-header">
+    <div class="kmt-logo">
+      <a href="/" title="Komito Analytics"><svg version="1.1"
+         xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px"
+         height="45px" viewBox="0 0 45 45"><polygon fill="#d20"
+         points="0,0 0,20.1 19.8,0"/><polygon fill="#f80"
+         points="0,32 0,45 20.9,45 8.3,24.6"/><polygon fill="#07d"
+         points="33.6,45 45,45 45,0 32.3,0 14.6,18"/></svg><span
+         class="thin-font"><b>Komito</b><i>Analytics</i></span></a>
     </div>
-    <div class="kmt-page-content">
-      <div class="kmt-section">
-        <h3>Looks like something went wrong!</h3>
-        <p>
-          We can't find the page you're looking for.<br>
-          We track these errors automatically, but if the problem persists feel free to contact us.
-        </p>
-      </div>
+    <div class="hamburger">
+      <div class="hamburger-box"><div class="hamburger-inner"></div></div>
     </div>
-    <div class="kmt-page-footer">
-      <a href="https://www.dtm.io" title="Datamart Inc."
-         class="dtm-logo"><svg xmlns="http://www.w3.org/2000/svg"
-         width="33px" height="33px" viewBox="0 0 83 75"><path fill="#d61700" d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill="#d61700" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill="#d61700" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill="#d61700" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><i>Powered by</i><b>Datamart</b></span></a>
-      <p>Komito Analytics is subject to the terms and conditions of
-        <a href="https://www.apache.org/licenses/LICENSE-2.0" rel="nofollow"
-           title="Apache License">Apache License 2.0</a>
-        <br>
-        <span itemprop="publisher" itemscope
-              itemtype="http://schema.org/Organization">
-          © <script>document.currentScript.outerText=(new Date).getFullYear()</script>
-          <a itemprop="url" href="https://www.dtm.io" title="Datamart Inc."><span
-             itemprop="name">Datamart Inc.</span></a>
-          <meta itemprop="sameAs" content="https://plus.google.com/103753969968292534269">
-          <meta itemprop="sameAs" content="https://www.linkedin.com/company/datamartinc">
-          <meta itemprop="sameAs" content="https://www.facebook.com/datamartinc">
-          <meta itemprop="sameAs" content="https://twitter.com/thedatamartinc">
-        </span>
+    <div class="kmt-navigation">
+      <ul>
+        <li><a title="Komito Analytics overview page."
+               href="/" >Overview</a></li>
+        <li><a title="Step-by-step Komito Analytics integration instructions."
+               href="/integration/" >Integration</a></li>
+        <li><a title="See Komito Analytics in action!"
+               href="/demo/" class="kmt-current-page">Demo</a></li>
+        <li><a href="https://github.com/Datamart/Komito/tree/master"
+               title="Get Komito Analytics Source Code."
+               rel="nofollow">Get source code</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="kmt-page-content">
+    <div class="kmt-section">
+      <h3>Looks like something went wrong!</h3>
+      <p>
+        We can't find the page you're looking for.<br>
+        We track these errors automatically, but if the problem persists feel free to contact us.
       </p>
     </div>
   </div>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
-  </script>
-  <script src="/scripts/functions.js"></script>
-  <script src="https://komito.net/komito.js"></script>
+  <div class="kmt-page-footer">
+    <a href="https://www.dtm.io" title="Datamart Inc."
+       class="dtm-logo"><svg xmlns="http://www.w3.org/2000/svg"
+       width="33px" height="33px" viewBox="0 0 83 75"><path fill="#d61700" d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill="#d61700" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill="#d61700" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill="#d61700" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><i>Powered by</i><b>Datamart</b></span></a>
+    <p>Komito Analytics is subject to the terms and conditions of
+      <a href="https://www.apache.org/licenses/LICENSE-2.0" rel="nofollow"
+         title="Apache License">Apache License 2.0</a>
+      <br>
+      <span itemprop="publisher" itemscope
+            itemtype="http://schema.org/Organization">
+        © <script>document.currentScript.outerText=(new Date).getFullYear()</script>
+        <a itemprop="url" href="https://www.dtm.io" title="Datamart Inc."><span
+           itemprop="name">Datamart Inc.</span></a>
+        <meta itemprop="sameAs" content="https://plus.google.com/103753969968292534269">
+        <meta itemprop="sameAs" content="https://www.linkedin.com/company/datamartinc">
+        <meta itemprop="sameAs" content="https://www.facebook.com/datamartinc">
+        <meta itemprop="sameAs" content="https://twitter.com/thedatamartinc">
+      </span>
+    </p>
+  </div>
+</div>
+
+<script src="https://www.google-analytics.com/analytics.js"></script>
+<script>ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');</script>
+<script src="./scripts/functions.js"></script>
+<script src="https://komito.net/komito.js"></script>
 </body>
 </html>
