Updated path to functions.js

--- a/integration/index.html
+++ b/integration/index.html
@@ -334,6 +334,6 @@
 
 <script src="https://www.google-analytics.com/analytics.js"></script>
 <script>ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');</script>
-<script src="./scripts/functions.js"></script>
+<script src="../scripts/functions.js"></script>
 <script src="https://komito.net/komito.js"></script>
 </body></html>
