--- a/demo/index.html
+++ b/demo/index.html
@@ -337,6 +337,6 @@ s.tl = function(lnk, linkType, linkName) {
 
 <script src="https://www.google-analytics.com/analytics.js"></script>
 <script>ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');</script>
-<script src="./scripts/functions.js"></script>
+<script src="../scripts/functions.js"></script>
 <script src="https://komito.net/komito.js"></script>
 </body></html>
