Updated 'redirect' to komito.net

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,342 +1,5 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" itemscope
-      itemtype="http://schema.org/WebPage" lang="en">
-<head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"><link rel="manifest" href="../manifest.json">
-
-<title>Komito Analytics Demo Page</title>
-<link rel="canonical" href="https://komito.net/demo">
-<meta name="description" content="See Komito Analytics in action!">
-
-<meta itemprop="name" content="Komito Analytics Demo Page">
-<meta itemprop="url" content="https://komito.net/demo">
-<meta itemprop="description" content="See Komito Analytics in action!">
-<meta itemprop="image" content="https://komito.net/images/komito-logo-600x455.jpg">
-
-<meta property="og:title" content="Komito Analytics Demo Page">
-<meta property="og:url" content="https://komito.net/demo">
-<meta property="og:description" content="See Komito Analytics in action!">
-<meta property="og:image" content="https://komito.net/images/komito-logo-600x455.jpg">
-<meta property="og:type" content="website">
-
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@thedatamartinc">
-<meta name="twitter:creator" content="@thedatamartinc">
-<meta name="twitter:title" content="Komito Analytics Demo Page">
-<meta name="twitter:url" content="https://komito.net/demo">
-<meta name="twitter:description" content="See Komito Analytics in action!">
-<meta name="twitter:image" content="https://komito.net/images/komito-logo-600x455.jpg">
-
-<link href="../favicon.ico" rel="shortcut icon">
-<link href="../styles.css" rel="stylesheet">
-<link rel="prefetch prerender" href="https://komito.net">
-<link rel="prefetch prerender" href="https://komito.net/integration/">
-<link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
-</head>
-<body class="kmt-demo">
-<div class="kmt-page">
-  <div class="kmt-page-header">
-    <div class="kmt-logo">
-      <a href="../" title="Komito Analytics"><svg version="1.1"
-         xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px"
-         height="45px" viewBox="0 0 45 45"><polygon fill="#d20"
-         points="0,0 0,20.1 19.8,0"/><polygon fill="#f80"
-         points="0,32 0,45 20.9,45 8.3,24.6"/><polygon fill="#07d"
-         points="33.6,45 45,45 45,0 32.3,0 14.6,18"/></svg><span
-         class="thin-font"><b>Komito</b><i>Analytics</i></span></a>
-    </div>
-    <div class="hamburger">
-      <div class="hamburger-box"><div class="hamburger-inner"></div></div>
-    </div>
-    <div class="kmt-navigation">
-      <ul>
-        <li><a title="Komito Analytics overview page."
-               href="../" >Overview</a></li>
-        <li><a title="Step-by-step Komito Analytics integration instructions."
-               href="../integration/" >Integration</a></li>
-        <li><a title="See Komito Analytics in action!"
-               href="./" class="kmt-current-page">Demo</a></li>
-        <li><a href="https://github.com/Datamart/Komito/tree/master"
-               title="Get Komito Analytics Source Code."
-               rel="nofollow">Get source code</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="kmt-page-content">
-    <div class="kmt-section">
-      <h3>Komito Analytics Demo</h3>
-      <p>See Komito Analytics in action!</p>
-      <p class="info">This page runs a Komito in debug mode. Please open Console to view dispatched events and sent requests.</p>
-
-      <div class="kmt-parameter">
-        <h4>Print</h4>
-        <table>
-          <tr>
-            <th>Clicking on links "Print" event will be dispatched.</th>
-            <td>
-              <ul>
-                <li><a href="javascript:window.print()">Print</a> (Ctrl+P / Cmd+P)</li>
-              </ul>
-            </td>
-          </tr>
-        </table>
-      </div>
-
-      <div class="kmt-parameter">
-        <h4>Scroll</h4>
-        <table>
-          <tr>
-            <th>Scrolling page "Scroll" event will be dispatched.</th>
-            <td>
-              <ul>
-                <li><a href="javascript:window.scrollTo(0, document.documentElement.scrollHeight * 0.25);">Scroll 25%</a></li>
-                <li><a href="javascript:window.scrollTo(0, document.documentElement.scrollHeight * 0.5);">Scroll 50%</a></li>
-                <li><a href="javascript:window.scrollTo(0, document.documentElement.scrollHeight * 0.75);">Scroll 75%</a></li>
-                <li><a href="javascript:window.scrollTo(0, document.documentElement.scrollHeight);">Scroll 100%</a></li>
-              </ul>
-            </td>
-          </tr>
-        </table>
-      </div>
-
-      <div class="kmt-parameter">
-        <h4>Outbound Links</h4>
-        <table>
-          <tr>
-            <th>Clicking on links "Outbound" event will be dispatched.<br>
-              If link is a Social Network, "Social" event will be dispatched too.</th>
-            <td>
-              <ul>
-                <li><a href="https://www.dtm.io/">Datamart</a></li>
-                <li><a href="https://www.linkedin.com/company/datamartinc" rel="nofollow">LinkedIn</a></li>
-                <li><a href="https://www.facebook.com/datamartinc" rel="nofollow">Facebook</a></li>
-                <li><a href="https://plus.google.com/+vpodk" rel="nofollow">Google+</a></li>
-                <li><a href="https://twitter.com/vpodk" rel="nofollow">Twitter</a></li>
-                <li><a href="https://analytics.blogspot.com/" rel="nofollow">Blogger</a></li>
-              </ul>
-            </td>
-          </tr>
-        </table>
-      </div>
-
-      <div class="kmt-parameter">
-        <h4>Download Links</h4>
-        <table>
-          <tr>
-            <th>Clicking on links "Download" event will be dispatched.<br>
-              If link is in other domain, "Outbound" event will be dispatched too.</th>
-            <td>
-              <ul>
-                <li>
-                  <a href="https://www.dtm.io/case-studies/files/Datamart-WebAnalytics-CaseStudy.pdf"
-                     rel="nofollow">Datamart-WebAnalytics-CaseStudy.pdf</a>
-                </li>
-                <li>
-                  <a href="https://dl.google.com/closure-compiler/compiler-latest.zip"
-                     rel="nofollow">Google-Closure-Compiler.zip</a> (Other domain)
-                </li>
-              </ul>
-            </td>
-          </tr>
-        </table>
-      </div>
-
-      <div class="kmt-parameter">
-        <h4>Call To Action Links</h4>
-        <table>
-          <tr>
-            <th>Clicking on links "CTA" event will be dispatched.</th>
-            <td>
-              <ul>
-                <li><a href="mailto:support@komito.net">mailto:support@komito.net</a></li>
-                <li><a href="mailto:hr@dtm.io?subject=Resume">mailto:hr@dtm.io?subject=Resume</a></li>
-                <li><a href="tel:+14157997500">tel:+14157997500</a></li>
-                <li><a href="sms:+14157997500">sms:+14157997500</a></li>
-                <li><a href="skype:datamart.company?call">skype:datamart.company?call</a></li>
-              </ul>
-            </td>
-          </tr>
-        </table>
-      </div>
-
-      <div class="kmt-parameter">
-        <h4>Forms</h4>
-        <table>
-          <tr>
-            <th>Clicking on button "Form" event will be dispatched.</th>
-            <td>
-              <form name="registration-form" onsubmit="return false">
-                <div class="form-item">
-                  <label>Name:</label>
-                  <input name="name" value="name" type="text">
-                </div>
-                <div class="form-item">
-                  <label>Age:</label>
-                  <select name="age"><option value="20">20</option></select>
-                </div>
-                <div class="form-item">
-                  <label>Text:</label>
-                  <textarea name="comment">comment</textarea>
-                </div>
-                <div class="dtm-form-item">
-                  <button type="submit"
-                          style="padding:9px 15px 10px"
-                          class="dtm-button clr-red">Submit</button>
-                </div>
-              </form>
-            </td>
-          </tr>
-        </table>
-      </div>
-
-      <div class="kmt-parameter">
-        <h4>Media</h4>
-        <table>
-          <tr>
-            <th>"Media" event will be dispatched.</th>
-            <td>
-              <em>HTML5</em>
-              <video width="460" height="260" controls>
-                <source src="https://www.quirksmode.org/html5/videos/big_buck_bunny.mp4"
-                        type="video/mp4">
-                <source src="https://www.quirksmode.org/html5/videos/big_buck_bunny.webm"
-                        type="video/webm">
-                <source src="https://www.quirksmode.org/html5/videos/big_buck_bunny.ogv"
-                        type="video/ogg">
-              </video>
-              <em>Youtube</em>
-              <iframe src="https://www.youtube.com/embed/aqz-KE-bpKQ"
-                      width="460" height="260" frameborder="0"
-                      webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-              <em>Vimeo</em>
-              <iframe src="https://player.vimeo.com/video/1084537"
-                      width="460" height="260" frameborder="0"
-                      webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </td>
-          </tr>
-        </table>
-      </div>
-
-      <div class="kmt-parameter">
-        <h4>Social Buttons</h4>
-        <table class="social-buttons">
-          <tr>
-            <th>Clicking on links "Social" event will be dispatched.</th>
-            <td>
-              <ul>
-                <li>
-                  <b>Twitter</b>
-                  <script type="text/javascript"
-                          src="https://platform.twitter.com/widgets.js"></script>
-                  <a href="https://twitter.com/share" class="twitter-share-button"
-                     data-lang="en" rel="nofollow">Tweet</a>
-                  <a href="https://twitter.com/vpodk" class="twitter-follow-button"
-                     data-show-count="false" data-lang="en" rel="nofollow">Follow @vpodk</a>
-                  <a href="https://twitter.com/intent/tweet?text=Hello%20world"
-                     target="_blank" rel="nofollow,noopener">Tweet</a>
-                </li>
-                <li>
-                  <b>LinkedIn</b>
-                  <script type="text/javascript"
-                          src="https://platform.linkedin.com/in.js"></script>
-                  <script type="IN/Share" data-counter="right"></script>
-                  <script type="IN/FollowCompany" data-id="6442972"
-                          data-counter="right"></script>
-                </li>
-                <li>
-                  <b>Facebook</b>
-                  <script type="text/javascript" id="facebook-jssdk"
-                          src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=367159160142267&amp;status=1&amp;cookie=1">
-                  </script>
-                  <div class="fb-like" data-href="https://datamart.github.io/Komito/"
-                       data-layout="button" data-action="like" data-show-faces="false"
-                       data-share="false"></div>
-                  <div class="fb-share-button"
-                       data-href="https://datamart.github.io/Komito/"></div>
-                  <div class="fb-send" data-href="https://datamart.github.io/Komito/"
-                       data-colorscheme="light"></div>
-                  <div class="fb-follow"
-                       data-href="https://datamart.github.io/Komito/"
-                       data-colorscheme="light"
-                       data-layout="button" data-show-faces="false"></div>
-                  <div id="fb-root" class="fb_reset"></div>
-                </li>
-              </ul>
-            </td>
-          </tr>
-        </table>
-      </div>
-
-    </div>
-    <div class="kmt-section extra">
-      <p><em>Still have a questions?&nbsp;</em>
-      <a href="mailto:support@komito.net" class="button" title="Ask Komito support team">Ask Komito support team</a>
-      <i class="or">-&nbsp;OR&nbsp;-</i>
-      <a href="https://github.com/Datamart/Komito/issues" rel="nofollow" class="button grayscale" title="Post issue">Post issue</a>
-      </p>
-    </div>
-  </div>
-  <div class="kmt-page-footer">
-    <a href="https://www.dtm.io" title="Datamart Inc."
-       class="dtm-logo"><svg xmlns="http://www.w3.org/2000/svg"
-       width="33px" height="33px" viewBox="0 0 83 75"><path fill="#d61700" d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill="#d61700" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill="#d61700" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill="#d61700" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><i>Powered by</i><b>Datamart</b></span></a>
-    <p>Komito Analytics is subject to the terms and conditions of
-      <a href="https://www.apache.org/licenses/LICENSE-2.0" rel="nofollow"
-         title="Apache License">Apache License 2.0</a>
-      <br>
-      <span itemprop="publisher" itemscope
-            itemtype="http://schema.org/Organization">
-        © <script>document.currentScript.outerText=(new Date).getFullYear()</script>
-        <a itemprop="url" href="https://www.dtm.io" title="Datamart Inc."><span
-           itemprop="name">Datamart Inc.</span></a>
-        <meta itemprop="sameAs" content="https://plus.google.com/103753969968292534269">
-        <meta itemprop="sameAs" content="https://www.linkedin.com/company/datamartinc">
-        <meta itemprop="sameAs" content="https://www.facebook.com/datamartinc">
-        <meta itemprop="sameAs" content="https://twitter.com/thedatamartinc">
-      </span>
-    </p>
-  </div>
-</div>
-
-<script>
-// Emulating GA Classic.
-var _gaq = {
-  push: function(args) {
-    console.log('GA Classic', '_gaq', args);
-  }
-};
-
-// Emulating Tongji Baidu
-var _hmt = {
-  push: function(args) {
-    console.log('Baidu', '_hmt', args);
-  }
-};
-
-// Emulating Urchin
-function __utmTrackEvent(category, action, opt_label, opt_value, opt_page) {
-  console.log('Urchin', '__utmTrackEvent:', arguments);
-}
-
-// Emulating ClickTale
-function ClickTaleEvent(event) {
-  console.log('ClickTaleEvent:', event);
-}
-
-// Emulating Omniture (Adobe Marketing Cloud) tracking.
-function TagLoader() {}
-var s = new TagLoader();
-s.tl = function(lnk, linkType, linkName) {
-  s.lnk = lnk;
-  s.linkType = linkType;
-  s.linkName = linkName;
-  console.log('Adobe TagLoader', s);
-};
-</script>
-
-<script src="https://www.google-analytics.com/analytics.js"></script>
-<script>ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');</script>
-<script src="../scripts/functions.js"></script>
-<script src="https://komito.net/komito.js"></script>
-</body></html>
+<html><head>
+<link rel="canonical" href="https://komito.net/demo/">
+<script>location.replace('https://komito.net/demo/');</script>
+<noscript><meta http-equiv="refresh" content="0; url=https://komito.net/demo/"></noscript>
+</head><body><a href="https://komito.net/demo/">Reload</a></body></html>
