Updated redirect to komito.net

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,5 +1,5 @@
 <html><head>
 <link rel="canonical" href="https://komito.net/demo/">
-<script>location.replace('https://komito.net/demo/');</script>
+<script>location.replace('https://komito.net/demo/' + location.search);</script>
 <noscript><meta http-equiv="refresh" content="0; url=https://komito.net/demo/"></noscript>
 </head><body><a href="https://komito.net/demo/">Reload</a></body></html>
