--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
 <link rel="canonical" href="https://komito.net/">
-<script>location.replace('https://komito.net/');</script>
+<script>location.replace('https://komito.net/' + location.search);</script>
 <noscript><meta http-equiv="refresh" content="0; url=https://komito.net/"></noscript>
 </head><body><a href="https://komito.net/">Reload</a></body></html>
