--- a/integration/index.html
+++ b/integration/index.html
@@ -1,5 +1,5 @@
 <html><head>
 <link rel="canonical" href="https://komito.net/integration/">
-<script>location.replace('https://komito.net/integration/');</script>
+<script>location.replace('https://komito.net/integration/' + location.search);</script>
 <noscript><meta http-equiv="refresh" content="0; url=https://komito.net/integration/"></noscript>
 </head><body><a href="https://komito.net/integration/">Reload</a></body></html>
